Bug 148140 - Automatic font color is not considering brightness of background in edit mode
Summary: Automatic font color is not considering brightness of background in edit mode
Status: VERIFIED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Impress (show other bugs)
Version:
(earliest affected)
Inherited From OOo
Hardware: All All
: medium normal
Assignee: Caolán McNamara
URL:
Whiteboard: target:7.5.0 target:7.4.4
Keywords:
Depends on:
Blocks: Linux-Dark-Mode
  Show dependency treegraph
 
Reported: 2022-03-22 15:09 UTC by Pedro
Modified: 2022-11-27 13:37 UTC (History)
6 users (show)

See Also:
Crash report or crash signature:


Attachments
Impress active font color is black (112.51 KB, image/png)
2022-03-22 15:09 UTC, Pedro
Details
Proposed fix: change to white color (115.06 KB, image/png)
2022-03-22 15:09 UTC, Pedro
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Pedro 2022-03-22 15:09:06 UTC
Created attachment 179042 [details]
Impress active font color is black

In Impress with LibreOffice Dark Color Scheme, the active font color is black by default.
This should be changed to white to increase contrast.
Comment 1 Pedro 2022-03-22 15:09:37 UTC
Created attachment 179043 [details]
Proposed fix: change to white color

Proposed fix.
Comment 2 Heiko Tietze 2022-03-23 07:38:54 UTC
The font color is Automatic and becomes white on dark background. But in edit mode it does not take the background into account.
Comment 3 Heiko Tietze 2022-03-24 12:05:53 UTC
No idea here. ImpEditEngine::GetAutoColor() works well but I cannot find the code when the textframe becomes a textedit, or whatever happens with the edit mode.
Comment 4 Pedro 2022-03-24 13:14:58 UTC
If Hossein doesn't know how to fix it, the quick work-around is to define a color in Font color instead of leaving it in Automatic.
Comment 5 Pedro 2022-03-27 15:42:12 UTC
Heiko already fixed this. Bravo.
Comment 6 Heiko Tietze 2022-03-28 07:02:59 UTC
I didn't fix this bug.
Comment 7 Rizal Muttaqin 2022-03-28 08:03:45 UTC
The font color is light by default, but turns out to be dark in editing mode. Happens in all texts on Title as well as Content frame

Version: 7.4.0.0.alpha0+ / LibreOffice Community
Build ID: 2816f498505bab01bc0f17ef0962ece663c607c9
CPU threads: 8; OS: Linux 5.13; UI render: default; VCL: kf5 (cairo+xcb)
Locale: id-ID (id_ID.UTF-8); UI: en-US
Calc: threaded
Comment 8 dhina 2022-03-29 17:01:13 UTC
This happens in any text boxes in Impress or Writer.

Also, similar issue with:
- background color in slide show mode (white instead of black) -s see bug #148247
- text boundaries in Writer -- see Bug #148092
Comment 9 Commit Notification 2022-11-08 13:53:55 UTC
Caolán McNamara committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/000a05339b4d7d25aea063a16b7a01ca9080978f

Resolves: tdf#148140 get text auto color right in impress edit mode

It will be available in 7.5.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 10 Caolán McNamara 2022-11-08 13:59:54 UTC
that seems to address comment #1 at least, backport to 7-4 in gerrit
Comment 11 Commit Notification 2022-11-09 19:18:27 UTC
Caolán McNamara committed a patch related to this issue.
It has been pushed to "libreoffice-7-4":

https://git.libreoffice.org/core/commit/76f8dbf386525ab33844a7fe71b978615247734f

Resolves: tdf#148140 get text auto color right in impress edit mode

It will be available in 7.4.4.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 12 dhina 2022-11-12 11:02:23 UTC
thanks Caolan, it solves the issue here on my macos 10.15
Comment 13 Dieter 2022-11-27 13:37:53 UTC
(In reply to dhina from comment #12)
> thanks Caolan, it solves the issue here on my macos 10.15

=> VERIFIED FIXED