Resolves: tdf#148140 get text auto color right in impress edit mode

Change-Id: I2695c86e9b749a4c38920af6d33e8e89f8ea3c62
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/142426
Tested-by: Jenkins
Reviewed-by: Caolán McNamara <caolanm@redhat.com>